modificação no estilo do exemplo

--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
+
 <head>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
+    <title>Aula invertida</title>
 </head>
+
 <body>
-    <button class="botao">Normal</button>
-    <button class="botao botao--hover">Hover</button>
-    <button class="botao botao--desativado">Desativado</button>    
+    <h1>Padrão BEM</h1>
+    <h2>Block, Element, Modifier</h2>
+    <div class="botoes">
+        <button class="botao">Normal</button>
+        <button class="botao botao--hover">Hover</button>
+        <button class="botao botao--desativado">Bloqueado</button>
+    </div>
 </body>
+
 </html>
